Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54977

[iOS] Stopping one OrientationSensors stops all the other OrientationSensor instances as well

XMLWordPrintable

      Steps to reproduce the issue:
      1. Run attached test application
      2. Rotate the device and observe how the orientation sensor values are changing
      2. Wait 5 seconds
      -> Both sensor instances stop reporting values
      Expected:
      Only the sensor that has been stopped stops and doesn't affect on the other instances.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richard Richard Moe Gustavsen
            kileppal Kimmo Leppälä
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes